Fix scriptCodeForHanFromSubtags() may return non-Han scripts

This patch fixes a regression caused by the refactoring[1] that
scriptCodeForHanFromSubtags() may return non-Han Ideographic scripts
by sharing the script data with scriptCodeForHanFromSubtags().

Also clean up #include of LocaleToScriptMapping.h that are no longer
used.

[1] https://codereview.chromium.org/2192703002

BUG=635547

Review-Url: https://codereview.chromium.org/2222283002
Cr-Commit-Position: refs/heads/master@{#410619}

Former-commit-id: a03e3af96e1897c19e045842b8dd67b6eac3fa28