third_party/WebKit/Source/platform/text/LocaleToScriptMapping.h
@@ -44,6 +44,16 @@ PLATFORM_EXPORT UScriptCode scriptNameToCode(const String&);
 
 PLATFORM_EXPORT UScriptCode scriptCodeForHanFromSubtags(const String&, char delimiter = '-');
 
+inline bool isUnambiguousHanScript(UScriptCode script)
+{
+    // localeToScriptCodeForFontSelection() does not return these values.
+    DCHECK(script != USCRIPT_HIRAGANA && script != USCRIPT_KATAKANA);
+    return script == USCRIPT_KATAKANA_OR_HIRAGANA
+        || script == USCRIPT_SIMPLIFIED_HAN
+        || script == USCRIPT_TRADITIONAL_HAN
+        || script == USCRIPT_HANGUL;
+}
+
 }
 
 #endif
